[project]
name = "tagged-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.3.6",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "flake8-docstrings>=1.7.0",
]
